updated list section

--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta reprehenderit eveniet asperiores excepturi nulla .
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, delectus!</p>
+    <ul>
+        <li>name</li>
+        <li>class</li>
+        <li>school</li>
+    </ul>
 </body>
 </html>
